--- a/packages/astro/test/fixtures/core-image-infersize/src/pages/index.astro
+++ b/packages/astro/test/fixtures/core-image-infersize/src/pages/index.astro
@@ -1,17 +1,17 @@
 ---
-// https://avatars.githubusercontent.com/u/622227?s=64 is a .jpeg
+// https://avatars.githubusercontent.com/u/622227?s=64&v=4 is a .jpeg
 import { Image, Picture, getImage, inferRemoteSize } from 'astro:assets';
 
-const { width, height } = await inferRemoteSize('https://avatars.githubusercontent.com/u/622227?s=64');
+const { width, height } = await inferRemoteSize('https://avatars.githubusercontent.com/u/622227?s=64&v=4');
 
 const remoteImg = await getImage({
-	src: 'https://avatars.githubusercontent.com/u/622227?s=64',
+	src: 'https://avatars.githubusercontent.com/u/622227?s=64&v=4',
 	inferSize: true,
 	alt: '',
 });
 ---
-<Image src="https://avatars.githubusercontent.com/u/622227?s=64," inferSize={true} , alt="" />
-<Picture src="https://avatars.githubusercontent.com/u/622227?s=64," inferSize={true} , alt="" />
+<Image src="https://avatars.githubusercontent.com/u/622227?s=64&v=4" inferSize={true} alt="" />
+<Picture src="https://avatars.githubusercontent.com/u/622227?s=64&v=4" inferSize={true} alt="" />
 <img src={remoteImg.src} {...remoteImg.attributes} id="getImage" />
 
 <div id="direct">
