feat: add new experimental Rust compiler (#15543)
* feat: use the rust compiler

* fix: adjust for new compile preprocessStyle API

* fix: update for diagnostic shape

* feat: experimental flag

* fix: unrelated changes

* chore: lockfile

* fix: make tests pass on both compilers

* chore: docs

* chore: clean up

* Apply suggestions from code review

* fix: add tests and bump

* Update .changeset/rust-compiler-experimental.md

Co-authored-by: Sarah Rainsberger <5098874+sarah11918@users.noreply.github.com>

* Apply suggestions from code review

Co-authored-by: Yan <61414485+yanthomasdev@users.noreply.github.com>

---------

Co-authored-by: Sarah Rainsberger <5098874+sarah11918@users.noreply.github.com>
Co-authored-by: Yan <61414485+yanthomasdev@users.noreply.github.com>

--- a/packages/astro/test/fixtures/core-image-ssg/src/pages/special-chars.astro
+++ b/packages/astro/test/fixtures/core-image-ssg/src/pages/special-chars.astro
@@ -8,4 +8,5 @@ import { Image } from 'astro:assets';
 </head>
 <body>
 	<Image src="https://kaleidoscopic-biscotti-6fe98c.netlify.app/c%2523.png" alt="C#" inferSize />
+</body>
 </html>
