--- a/packages/astro/components/Code.astro
+++ b/packages/astro/components/Code.astro
@@ -1,5 +1,5 @@
 ---
-import { type ThemePresets, createShikiHighlighter } from '@astrojs/markdown-remark';
+import { createShikiHighlighter, type ThemePresets } from '@astrojs/markdown-remark/shiki';
 import type { ShikiTransformer, ThemeRegistration, ThemeRegistrationRaw } from 'shiki';
 import { bundledLanguages } from 'shiki/langs';
 import type { CodeLanguage } from '../dist/types/public/common.js';
